added some html. Needs work.

--- a/templates/data.html
+++ b/templates/data.html
@@ -1,6 +1,6 @@
 <div>
-    New Text!
+    <h1 style='color:red'>It is now all upper case!</h1>
 
-    {{ data['userText'] }}
+    <p>{{ data['userText'] }} </p>
 
 </div>
