Added some validation logic and reformated the code.

--- a/templates/data.html
+++ b/templates/data.html
@@ -1,6 +1,2 @@
-<div>
-    <h1 style='color:red'>It is now all upper case!</h1>
-
-    <p>{{ data['userText'] }} </p>
-
-</div>
+ <p style='color:red'>It is now all upper case!</p>
+ <p>{{ data['userText'] }} </p>
